Stop Table Aspect Ratio From Being Squashed On Wider Screens

--- a/client/app/styles/components/game/_actionPanel.scss
+++ b/client/app/styles/components/game/_actionPanel.scss
@@ -1,6 +1,7 @@
 
 .actionPanel {
     grid-column-start: 2;
-    grid-row-start: 4;
+    grid-row-start: 3;
     background-color: pink;
+    margin-top: 5em;
 }
